# apex-db

./: .gitignore  BACKLOG.md  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  README_ko.md  architecture_design.md  layer3_execution_engine.md  layer4_transpiler_client.md  pyproject.toml  system_requirements.md
apex_py/: __init__.py  arrow.py  connection.py  dataframe.py  streaming.py  utils.py
docs/api/: SQL_REFERENCE.md
docs/bench/: kdb_reference.md  results_e2e_mvp.md  results_phase_a.md  results_phase_b.md  results_phase_b_v2.md
docs/business/: BUSINESS_STRATEGY.md  EXECUTIVE_SUMMARY.md
docs/deployment/: PRODUCTION_DEPLOYMENT.md  README.md
docs/design/: architecture_design.md  high_level_architecture.md  high_level_architecture_ko.md  industry_business_analysis.md  initial_doc.md  kafka_consumer_design.md  kdb_replacement_analysis.md  layer1_storage_memory.md  layer2_ingestion_network.md  layer4_transpiler_client.md  multinode_usecases.md  phase_c_distributed.md  physical_ai_market.md
docs/devlog/: 000_environment_setup.md  001_e2e_pipeline.md  002_simd_jit.md  003_optimization_v2.md  006_distributed_cluster.md  007_sql_http_join.md  010_financial_functions.md  011_parallel_query.md  015_bare_metal_tuning.md  016_xbar_sortedcan_explain_null.md  017_connection_hooks_sorted_index_cli_timer.md  020_data_durability.md  021_ddl_schema_management.md
docs/feeds/: FEED_HANDLER_COMPLETE.md  FEED_HANDLER_GUIDE.md  PERFORMANCE_OPTIMIZATION.md
docs/operations/: PRODUCTION_OPERATIONS.md
docs/requirements/: system_requirements.md
include/apex/auth/: api_key_store.h  audit_buffer.h  auth_manager.h  jwt_validator.h  query_tracker.h  rate_limiter.h  rbac.h
include/apex/cluster/: cluster_node.h  health_monitor.h  partition_router.h  transport.h
include/apex/common/: logger.h  types.h
include/apex/core/: pipeline.h
include/apex/execution/: distributed_scheduler.h  jit_engine.h  join_operator.h  local_scheduler.h  parallel_scan.h  query_planner.h  query_scheduler.h  vectorized_engine.h  window_function.h  worker_pool.h
include/apex/ingestion/: ring_buffer.h  tick_plant.h  wal_writer.h
include/apex/migration/: clickhouse_migrator.h  duckdb_interop.h  hdb_loader.h  q_parser.h  q_to_python.h
include/apex/scheduler/: scheduler.h
include/apex/server/: http_server.h
include/apex/sql/: ast.h  executor.h  parser.h  tokenizer.h
include/apex/storage/: arena_allocator.h  column_store.h  flush_manager.h  hdb_reader.h  hdb_writer.h  partition_manager.h  schema_registry.h
include/apex/util/: logger.h
k8s/: deployment.yaml
monitoring/: alertmanager.yml  apex-db-alerts.yml  docker-compose.yml  grafana-dashboard.json  prometheus.yml
scripts/: ai_tune_bare_metal.py  apex-db.service  backup.sh  eod_process.sh  install_service.sh  restore.sh  tune_bare_metal.sh
src/auth/: api_key_store.cpp  auth_manager.cpp  jwt_validator.cpp  query_tracker.cpp  rate_limiter.cpp
src/cluster/: shm_backend.cpp  shm_backend.h  ucx_backend.cpp  ucx_backend.h
src/common/: logger.cpp
src/core/: pipeline.cpp
src/execution/: distributed_scheduler.cpp  jit_engine.cpp  join_operator.cpp  local_scheduler.cpp  parallel_scan.cpp  query_planner.cpp  vectorized_engine.cpp  worker_pool.cpp
src/feeds/: fix_parser.cpp  nasdaq_itch.cpp
src/ingestion/: ring_buffer.cpp  tick_plant.cpp  wal_writer.cpp
src/migration/: clickhouse_migrator.cpp  duckdb_interop.cpp  hdb_loader.cpp  q_lexer.cpp  q_parser.cpp  q_to_python.cpp  q_to_sql.cpp
src/scheduler/: scheduler.cpp
src/server/: http_server.cpp
src/sql/: executor.cpp  parser.cpp  tokenizer.cpp
src/storage/: arena_allocator.cpp  column_store.cpp  flush_manager.cpp  hdb_reader.cpp  hdb_writer.cpp  partition_manager.cpp
src/util/: logger.cpp
tests/: CMakeLists.txt
tests/bench/: bench_cluster.cpp  bench_hdb.cpp  bench_parallel.cpp  bench_pipeline.cpp  bench_simd_jit.cpp  bench_sql.cpp
tests/feeds/: test_fix_parser.cpp  test_nasdaq_itch.cpp
tests/integration/: test_multiprocess.sh
tests/migration/: test_clickhouse.cpp  test_duckdb.cpp  test_hdb_loader.cpp  test_q_to_python.cpp  test_q_to_sql.cpp  test_timescaledb.cpp
tests/python/: test_arrow_integration.py  test_pandas_integration.py  test_polars_integration.py  test_streaming.py
tests/unit/: test_arena_allocator.cpp  test_auth.cpp  test_cluster.cpp  test_column_store.cpp  test_features.cpp  test_financial_functions.cpp  test_hdb.cpp  test_parallel.cpp  test_ring_buffer.cpp  test_scheduler.cpp  test_sql.cpp  test_tick_plant.cpp  test_vectorized_engine.cpp
tools/: apex-cli.cpp  apex-migrate.cpp  apex_data_node.cpp
